--- a/style.css
+++ b/style.css
@@ -1,39 +1,52 @@
-body {
-    font-family: 'Alumni Sans Pinstripe';
-    font-weight: bold;
-    font-size: 1.25em;
-    background: whitesmoke;
+body{
+    font-family: 'Alumni Sans Pinstripe', sans-serif;
+    font-family: 'Barlow Condensed', sans-serif;
+    background-color:azure;
 }
-#logoCandado{
-    display: inline;
-    vertical-align: middle;
-    margin: 10px;
+.logotipo{
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 15px;
 }
-.textoLogo{
-    display: inline;
-    vertical-align: middle;
-    font-size: 2em;
-    font-weight: bold;
-    color: darkturquoise;
-    margin-top: 10px;
-    margin-bottom: 10px;
+.logotipo h1{
+    font-size:2em;
+    text-shadow: 2px 3px 5px darkgrey;
+
 }
-main{
+
+.contenido-principal{
     display: flex;
-    width: auto;
-    align-content: center;
-    vertical-align: middle;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: space-around;
+    justify-content: space-evenly;
+    align-items: flex-start;
 }
-.cajaEncriptar{
-    
-   
+
+.inputTexto{
+    padding: 15px;
+    border-color: aqua;
+    font-size: larger;
+    font-family: inherit;
+    resize: vertical;
 }
-.imagenLupa{
-    width: 200px;
-    visibility:visible;
-    
-   
+
+.mensaje{
+    padding: 15px;
+    border-color: aqua;
+    font-size: larger;
+    font-family: inherit;
+    resize: vertical;
 }
-.cajaDesencriptar{
-   
+.mensaje{
+    background: url(imagenes/lupa.png);
+    background-size:cover;   
+}
+
+footer {
+    text-align: center;
+    background: url(imagenes/bg_footer.jpg);
+    padding: 20px;
+    margin-top: 15px;
 }
